# conmotion

./: .env  .gitignore  .gitmodules  .tool-versions  Containerfile  Containerfile.docs  Containerfile.rp  Containerfile.service  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: cd.yml  docs.yml  oci_docs.yml  oci_rp.yml  oci_service.yml
conmotion/rp/: __main__.py
conmotion/service/: __main__.py  registration.py
conmotion/utils/: cert_key_generator.py  certs.py  configuration.py  key_generator.py  keys.py  logging.py
docs/: arch_provider-auditor.mmd  arch_provider-only.mmd  architecture.html  architecture.md  example_inventory-measurement_auditor.json  example_inventory_auditor.json  example_inventory_csp.json  index.md  references.bib  use-case_configuration.mmd  use-case_inventory.mmd
