[project]
name = "conmotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbor2>=5.6.5",
    "cryptography>=45.0.3",
    "python-json-logger>=3.3.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
